# pyhall-python

./: CONTRIBUTING.md  README.md  pyproject.toml
hall_api/: server.py
pyhall/: __init__.py  attestation.py  cli.py  common.py  conformance.py  models.py  policy_gate.py  registry.py  registry_client.py  router.py  rules.py  telemetry.py
pyhall/mcp/: __init__.py  __main__.py  example_worker.py  server.py
tests/: test_attestation.py  test_cli_user.py  test_conformance.py  test_hall_api.py  test_registry_client.py  test_router.py  test_standing.py
workers/examples/: README.md
workers/examples/hello_worker/: README.md  registry_record.json  rules.json  worker.py
workers/examples/mcp_interop/: README.md  mcp_server.py  registry_record.json  wcp_worker.py
