[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhall-wcp"
version = "0.1.2"
description = "PyHall — Python reference implementation of WCP (Worker Class Protocol)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["ai", "agents", "workers", "orchestration", "governance", "wcp", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "rich>=13.0",
    "typer>=0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
discord = [
    "discord-py>=2.4",
]

[project.urls]
Homepage = "https://pyhall.dev"
Documentation = "https://pyhall.dev/introduction/"
Repository = "https://github.com/fafolab/pyhall"
Issues = "https://github.com/fafolab/pyhall/issues"

[project.scripts]
pyhall = "pyhall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pyhall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
